--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "8pack.js",
   "start": "8pack.js",
-  "man": "./src/8pack.man",
   "scripts": {
-    "test": "./node_modules/.bin/jasmine-node spec"
+    "test": "jamsine"
   },
   "bin": {
     "8pack": "./bin/8pack"
   },
-  "author": "KepiKoi <kepi@",
+  "author": "kepikoi <kepi@binks.rocks>",
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.0.1",
@@ -19,6 +18,9 @@
     "minimist": "^1.2.0"
   },
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "chai": "^4.1.2",
+    "eslint": "^4.18.1",
+    "mocha": "^5.0.1",
+    "random-string": "^0.2.0"
   }
 }
